# fcpxml-mcp-server

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  SKILL.md  glama.json  pyproject.toml  requirements.txt  server.json  server.py  smithery.yaml
.github/workflows/: test.yml
docs/: CAPABILITY-AUDIT-2026-06.md  MCP_ECOSYSTEM.md  WORKFLOWS.md
docs/specs/: 01_TOOL_SCHEMAS.md  02_FCPXML_STRUCTURE.md  03_WRITER_PSEUDOCODE.py  04_AUTO_ROUGH_CUT_ALGORITHM.md  05_SERVER_IMPLEMENTATION.py  06_IMPLEMENTATION_ROADMAP.md  07_MODELS.py
examples/: sample.fcpxml
fcpxml/: __init__.py  diff.py  dtd.py  export.py  live.py  media_intel.py  models.py  parser.py  rough_cut.py  safe_xml.py  templates.py  transcribe.py  writer.py
tests/: __init__.py  test_bundles.py  test_diff.py  test_diversity.py  test_dtd_validation.py  test_edge_cases.py  test_export.py  test_fcpxml_writer.py  test_features_v05.py  test_features_v06.py  test_live.py  test_marker_pipeline.py  test_media_intel.py  test_models.py  test_parser.py  test_refactored_helpers.py  test_relink.py  test_rough_cut.py  test_security.py  test_server.py  test_speed_cutting.py  test_targeted_gaps.py  test_transcribe.py  test_validation.py  test_writer.py
tools/: __init__.py
