[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fcp-mcp-server"
version = "0.4.2"
description = "MCP server for Final Cut Pro XML. Analyze timelines, add markers, trim clips, and generate rough cuts via Claude."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DareDev256", email = "dare@jamesdare.com"}
]
keywords = ["final-cut-pro", "mcp", "video-editing", "fcpxml", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/DareDev256/fcp-mcp-server"
Repository = "https://github.com/DareDev256/fcp-mcp-server.git"
Issues = "https://github.com/DareDev256/fcp-mcp-server/issues"

[project.scripts]
fcp-mcp-server = "server:main_sync"

[tool.setuptools.packages.find]
where = ["."]
include = ["fcpxml*", "tools*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
exclude = ["docs/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
